Restructure project layout and added ES6 transformer

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "browserify": {
     "transform": [
-      "liveify"
+      [ "liveify" ],
+      [ "babelify", { "experimental": true } ]
     ]
   }
 }
